<?xml version="1.0"?>
<package>
  <name>my_first_ros_pkg</name>
  <version>0.0.1</version>
  <description>The my_first_ros_pkg package</description>
  <license>Apache License 2.0</license>
  <author email="khsrhhh@gmail.com">Choi Daeho</author>
  <maintainer email="khsrhhh@gmail.com">Choi Daeho</maintainer>
  <url type="bugtracker">https://github.com/khsrhhh/ROS/issues</url>
  <url type="repository">https://github.com/khsrhhh/ROS/</url>
  <url type="website">https://github.com/khsrhhh/ROS/</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
